--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rxfire": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuidv4": "^6.2.13",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
